main.css
/* ... */
a:hover
{
    text-decoration: underline;
    font: normal normal normal 12px/130% Arial, Tahoma, sans-serif;
}
/*** End Generic Tag Rules ***/


/*** Tabs / Panel Code ***/
/* This div is "behind" contents, *all the way down*. */
#main
{
    border: 1px solid #666;
    background: #6c94eb;
    color: #fff;
    clear: both;
    padding-top: 1.6em; /* Affects the height of the sub-tab bar; was 2em. */
    min-height: 400px;
    height: auto !important;
    height: 400px;
}

/* Main page body / tab contents div. */
#contents
{
    background: #fff;
    color: #000;
    padding: 0px 15px 10px 15px;
    min-height: 400px;
    height: auto !important;
    height: 400px;
    font: normal normal normal 12px Arial, Tahoma, sans-serif;
    margin-bottom: 0px;
    -webkit-box-shadow: 0px 10px 5px -5px rgba(112,112,112,1);
    -moz-box-shadow: 0px 10px 5px -5px rgba(112,112,112,1);
    box-shadow: 0px 10px 5px -5px rgba(112,112,112,1);
}

/* Modal dialog contents div. */
#modalContents
{
    background: #eee;
    color: #000;
    font: normal normal normal 12px Arial, Tahoma, sans-serif;
    margin: 0px;
    height: 100%;
    width: 100%;
}

#header
{
    position: relative;
    height: 2em;
}

#header ul#primary
{
    margin: 0px;
    padding: 0px;
    position: absolute;
    bottom: -1px;
    width: 80em;
    font: normal normal normal 12px Arial, Tahoma, sans-serif;
}

#header ul#primary li
{
    display: inline;
    list-style: none;
}

/* Inactive Tab */
#header ul#primary a.inactive
{
    background: #E2E2E2 url(images/tabs/inactive.jpg) no-repeat;
    align-items: center;
    box-sizing: border-box;
    justify-content: center;
    height: 21px;
    width: 81px;
    margin: 3px 3px 0px 0px; /* 1px more margin-left than a.active. */
    text-align: center;
    text-decoration: none;
    float: left;
    line-height: normal;
    color: #000;
    display: flex;
    overflow: visible;
    white-space: nowrap;
}

/* Inactive Tab Hover */
#header ul#primary a.inactive:hover
{
    margin-top: 1px;
    border-color: #666;
    padding-bottom: 2px;
}

/* Active Tab */
#header ul#primary a.active
{
    background: #E2E2E2 url(images/tabs/active.jpg) no-repeat;
    align-items: center;
    box-sizing: border-box;
    justify-content: center;
    height: 24px;
    width: 81px;
    margin: 1px 2px 0px 0px;
    text-align: center;
    text-decoration: none;
    float: left;
    color: #fff;
    display: flex;
    line-height: normal;
    overflow: visible;
    white-space: nowrap;
}

/* Active Tab Hover */
#header ul#primary a.active:hover
{
    text-decoration: none;
}

/* Secondary "Tab" Row*/
#header ul#secondary
{
    position: absolute;
    margin: 0px;
    padding: 0px;
    bottom: -1.9em;
    left: 1px;
    width: 65em;
    font: normal normal normal 12px Arial, Tahoma, sans-serif;
    min-height: 24px;
}

/* Inactive Secondary "Tab" */
#header ul#secondary li a
{
    align-items: center;
    text-align: center;
    display: flex;
    border: none;
    float: left;
    width: auto;
    min-height: 18px;
    padding: 3px 10px 2px 10px;
    margin: 3px 0px 0px 0px;
    border-right: 1px dotted #aaa;
    color: #f4f4f4;
    line-height: 14px;
    text-decoration: underline;
    white-space: nowrap;
}

/* Inactive Secondary "Tab" Hover */
#header ul#secondary li a:hover
{
    color: #ccc;
    text-decoration: underline;
}

/* Active Secondary "Tab"  */
#header ul#secondary li span
{
    align-items: center;
    width: auto;
    display: flex;
    border: none;
    float: left;
    min-height: 18px;
    padding: 3px 10px 2px 10px;
    margin: 3px 0px 0px 0px;
    border-right: 1px dotted #aaa;
    color: #ccc;
    line-height: 14px;
    white-space: nowrap;
}

/* The last secondary "tab". */
#header ul#secondary li:last-child a,
#header ul#secondary li:last-child span
{
    border: none;
}

/*** Header / Footer ***/
#quickSearchBlock
{
    margin: 0px 0px 0px 0px;
    padding: 5px 10px 5px 0px;
    background: #fff;
    background-image: url('images/mru_background.gif');
    background-repeat: repeat-x;
    text-align: right;
}

#quickSearchBlock span.quickSearchLabel
{
    color: #000;
    font: normal normal normal 12px Arial, Tahoma, sans-serif;
}

#MRUPanel
{
    padding: 0px;
    font: normal normal normal 12px Arial, Tahoma, sans-serif;
    background: #fff;
    border-bottom: 1px #bbb solid;
    width: 100%;
}

#MRUBlock
{
    position: absolute;
    padding: 5px 0px 0px 10px;
    margin: 0px 0px 0px 0px;
    font: normal normal normal 12px Arial, Tahoma, sans-serif;
    color: #000;
    background: #fff;
    background-image: url('images/mru_background.gif');
    background-repeat: repeat-x;

}

#MRUBlock span.MRUTitle
{
    color: #ff6600;
    font: normal normal bold 11px Arial, Tahoma, sans-serif;
    text-align: left;
}

#MRUBlock a
{
    color: #000;
    text-decoration: underline;
    font: normal normal normal 11px Arial, Tahoma, sans-serif;
}

#headerBlock
{
    margin: 0px;
    padding: 0px;
    height: 45px;
}

#headerBlock div#topRight
{
    color: #3e4754;
    margin-bottom: -5px;
    padding: 2px 3px 0px 5px;
    font: normal normal normal 11px Arial, Tahoma, sans-serif;
    float: right;
    text-align: right;
    background-color: transparent;
    width: 650px;
    height: 46px;
}

#headerBlock div#mainLogo
{
    padding: 0px 0px 0px 0px;
    float: left;
    background-color: transparent;
    background: url('images/cats_icon.gif') no-repeat center;
    width: 55px;
    height: 55px;
}

#headerBlock span#mainLogoText
{
    color: #2f4f88;
    margin-bottom: 0px;
    padding: 0px 5px 0px 5px;
    font: normal normal bold 30px Verdana, Tahoma, sans-serif;
    float: left;
}

#headerBlock span#subLogoText
{
    color: #6084C8;
    margin-bottom: 0px;
    padding: 0px 5px 0px 5px;
    font: normal normal bold 14px Verdana, Tahoma, sans-serif;
}

.footerBlock
{
    margin-top: 10px;
    text-align: center;
}
/* ... */

